[package]
name = "jdrpv3socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
tokio-tungstenite = "*"
futures-channel = "0.3.17"
futures-util = "0.3.17"
tokio = {version = "1.14.0", features = ["full"]}
tungstenite = "0.16.0"