[package]
name = "jdrpv3socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
jsonwebtoken = "7.2.0"
serde = "1.0.130"
serde_json = "1.0.71"
chrono = "0.4.15"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
# ws = "0.9.1"
ws = {git = "https://github.com/Evergreenn/ws-rs"}
redis = "0.21.4"
rand = "0.8.4"